testsuite/tests/typecheck/should_fail/tcfail015.alan
scopError() : proc
  fun() : proc
  { foo = 5; }

  foo : int;
{}
